--- a/01_Python_Essentials/4_numeric_datatype_typecasting.ipynb
+++ b/01_Python_Essentials/4_numeric_datatype_typecasting.ipynb
@@ -174,12 +174,12 @@
    "id": "7b8f6cae",
    "metadata": {},
    "source": [
-    "# convert str to int or float"
+    "# (IMPORTANT) Convert str to int or float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "58eb509f",
    "metadata": {},
    "outputs": [
@@ -187,9 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "<class 'int'>\n",
-      "1.0\n"
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -197,21 +195,78 @@
     "# step1: \n",
     "x = \"10\"\n",
     "print(type(x))\n",
-    "# print(x / 10) # ERROR\n",
-    "\n",
-    "\n",
+    "# print(x / 10) # ERROR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "289aafda-bf1e-463c-9d63-f75ba098fcd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
     "# step2: now convert str into int\n",
-    "x = int(x) # or float(x)\n",
-    "print(type(x))\n",
+    "x = \"10\"\n",
+    "x = int(x)       # or float(x)\n",
+    "\n",
+    "# print(type(x))\n",
+    "\n",
     "print(x / 10) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a33b04d-e58c-4b8d-8fb8-f517ebcb56db",
+   "metadata": {},
+   "source": [
+    "# (IMPORTANT) Convert int to str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "04887e31-28fb-4541-a30d-bbd5d8722846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "x = str(x)\n",
+    "\n",
+    "print(type(x))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cedaef88-a523-4aa8-b9f3-bd5949a85f38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "a6c4d3b5-63ae-46ad-bec9-39597faebd5b",
    "metadata": {},
    "source": [
-    "# convert float to int"
+    "# (OPTIONAL) convert float to int"
    ]
   },
   {
@@ -241,7 +296,7 @@
    "id": "c5406197-c653-4f6d-939b-5720e9641b4b",
    "metadata": {},
    "source": [
-    "### 4. Mixed Operations (int + float)"
+    "### 4. (OPTIONAL) Mixed Operations (int + float)"
    ]
   },
   {
@@ -272,7 +327,7 @@
    "id": "07c2252a",
    "metadata": {},
    "source": [
-    "### 5. Mixed Operations (int + float+ complex)"
+    "### 5. (OPTIONAL) Mixed Operations (int + float + complex)"
    ]
   },
   {
