--- a/01_Python_Essentials/7_conditional_ifelse.ipynb
+++ b/01_Python_Essentials/7_conditional_ifelse.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "#STEP2: Lets do some computation: if-elif-else\n",
+    "# STEP2: Lets do some computation: if-elif-else\n",
     "# Program to calculate the year user turns 100\n",
     "\n",
     "name = input(\"Enter your name: \")\n",
@@ -401,7 +401,8 @@
     }
    ],
    "source": [
-    "# if with 'and' #e.g.1#  Checking User Login Credentials\n",
+    "# if with 'and' \n",
+    "#e.g.1  Checking User Login Credentials\n",
     "\n",
     "username = input(\"Username:\")\n",
     "password = input(\"Enter password:\")\n",
