--- a/01_Python_Essentials/8_loop_for_range_while_break_continue1THEORY.ipynb
+++ b/01_Python_Essentials/8_loop_for_range_while_break_continue1THEORY.ipynb
@@ -38,58 +38,20 @@
    "source": [
     "# step1: suppose we want to print hello 4 times:\n",
     "print(\"hello\")\n",
+    "print(\"I am hungry\")\n",
     "print(\"hello\")\n",
+    "print(\"I am hungry\")\n",
     "print(\"hello\")\n",
+    "print(\"I am hungry\")\n",
     "print(\"hello\")\n",
+    "print(\"I am hungry\")\n",
     "\n",
     "#######################\n",
     "\n",
     "# step2: Or I can print using for loop\n",
     "for i in [0,1,2,3]: \n",
-    "    print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1518cbca-0181-4c16-938f-b6360303155e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "I am trapped in for loop\n",
-      "Whats going on?\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "Whats going on?\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "Whats going on?\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "Whats going on?\n",
-      "###############\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "hello\n",
-      "I am trapped in for loop\n",
-      "Whats going on?\n"
-     ]
-    }
-   ],
-   "source": [
-    "# where does the for loop ends: thats decided by indentation\n",
-    "\n",
-    "for i in [0,1,2,3]:\n",
     "    print(\"hello\")\n",
-    "    print(\"I am trapped in for loop\") \n",
+    "    print(\"I am hungry\")\n",
     "print(\"Finished\")"
    ]
   },
@@ -127,25 +89,18 @@
    ],
    "source": [
     "# What is this variable iterator i? Lets print this\n",
-    "# STEP1: \n",
-    "for i in [0,1,2,3]: \n",
-    "    print(i) # here I am accessing iterator i\n",
     "\n",
-    "print(\"###############\")\n",
-    "\n",
-    "# STEP2: Lets print a number in front of each line\n",
-    "for i in [0,1,2,3]:\n",
-    "    print(f\"{i}: hello\")\n",
-    "    print(\"I am trapped in for loop\") \n",
+    "# STEP1: Lets print a number in front of each line\n",
+    "for i in [0, 1, 2, 3]:\n",
+    "    print(i, \"I am trapped in for loop\") \n",
     "print(\"Finished\")\n",
     "\n",
     "\n",
-    "# STEP3: lets perform some math on elements: multiply all elements by 3\n",
-    "for i in [0,1,2,3]:\n",
+    "# STEP2: lets perform some math on elements: multiply all elements by 3\n",
+    "for i in [0, 1, 2, 3]:\n",
     "    res = i * 3\n",
     "    print(f\"{i} * 3 = {res}\")\n",
-    "print(\"Finished\")\n",
-    "\n"
+    "print(\"Finished\")"
    ]
   },
   {
@@ -166,11 +121,43 @@
     }
    ],
    "source": [
-    "#1) prints all elements of a list with meaningful message with each fruit\n",
+    "# 1) prints all elements of a list with meaningful message with each fruit\n",
     "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
     "for e in fruits:\n",
-    "    print(f\"I love {e}\")"
+    "    print(\"I love\", e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "78051a60-1543-4bcf-b5d9-fa401b51ed53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : I love mango\n",
+      "1 : I love kiwi\n",
+      "2 : I love cherry\n",
+      "3 : I love jackfruit\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2) enumerate\n",
+    "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
+    "for idx, e in enumerate(fruits):\n",
+    "    print(idx, \": I love\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf223a2-e6f7-460c-b208-b16525aeeb6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -217,7 +204,7 @@
     "# range(start, stop, step): Generates a sequence from start up to (but not including) stop, incrementing by step.\n",
     "# default step=1\n",
     "\n",
-    "for i in range(0,4): # here start=0, stop=4\n",
+    "for i in range(0, 4): # here start=0, stop=4\n",
     "    print(f\"{i} hello\") # here I am accessing iterator i\n",
     "    print(\"I am trapped in for loop\") \n",
     "    \n",
@@ -273,15 +260,15 @@
     "# for + break:\n",
     "\n",
     "# 1) Find if number 7 exists in a list: exit the loop after finding 7 in a list of numbers\n",
-    "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14]\n",
+    "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14, 76, 34, 23]\n",
     "\n",
     "for i in numbers:\n",
-    "    print(f\"checking {i}\")\n",
+    "    print(\"checking\", i)\n",
     "    if i == 7:\n",
-    "        print(f\"Found target! Exiting the for loop\")\n",
+    "        print(\"Found target! Exiting the for loop\")\n",
     "        break # NOTE: comment it out to see what happens without it\n",
-    "print(\"Loop finished\")\n",
-    "print(\"#####################\")      "
+    "        \n",
+    "print(\"Loop finished\")"
    ]
   },
   {
@@ -319,17 +306,16 @@
     }
    ],
    "source": [
-    "# 1) continue: print all number except 65\n",
+    "# 1) continue: make all numbers negative, except 65\n",
     "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 65, 14]\n",
     "\n",
     "for i in numbers:\n",
     "    if i == 65:\n",
-    "        print(f\"skipping number {i}\")\n",
+    "        print(\"skipping number\", i)\n",
     "        continue # NOTE: comment it out to see what happens without it\n",
-    "    print(f\"number: {i}\")\n",
+    "    print(f\"make it negative: {-i}\")\n",
     "        \n",
-    "print(\"Loop finished\")\n",
-    "print(\"#####################\")      "
+    "print(\"Loop finished\")"
    ]
   },
   {
@@ -373,8 +359,7 @@
     "i = 1\n",
     "while i <= 5:\n",
     "    print(i)\n",
-    "    i += 1  # Increment i by 1\n",
-    "print(\"#################\")\n"
+    "    i += 1  # Increment i by 1\n"
    ]
   },
   {
@@ -720,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
