--- a/01_Python_Essentials/3_operators_2_Logical_Membership_Identity.ipynb
+++ b/01_Python_Essentials/3_operators_2_Logical_Membership_Identity.ipynb
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -49,7 +51,6 @@
     "print(False and True)\n",
     "print(False and False)\n",
     "\n",
-    "\n",
     "print(\"#######################\")\n",
     "print(True  and True and True  and True)\n",
     "print(True  and True and False and True)"
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,29 +93,27 @@
     }
    ],
    "source": [
-    "# example2: Check if age and income satisfy some condition\n",
-    "age = 25 \n",
+    "# example2: Check if age > 20 and income > 15000 ( satisfy some condition )\n",
+    "age    = 25 \n",
     "income = 20000\n",
     "\n",
-    "# Check if age > 20 and income > 15000\n",
-    "res = age > 20 and income > 15000 \n",
-    "# res = True      and    True\n",
+    "# res = age > 20 and income > 15000 \n",
+    "# res = True   and    True\n",
     "\n",
-    "print(res)\n",
+    "# print(res)\n",
     "########################\n",
     "age = 25 \n",
     "income = 20000\n",
     "\n",
-    "# Check if age > 30 and income < 15000\n",
-    "# res = age > 30 and income < 15000 \n",
-    "# res =  False   and   False\n",
+    "res = age > 30 and income < 15000 \n",
+    "# res =  False and   False\n",
     "\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +132,7 @@
     }
    ],
    "source": [
-    "# or condition: if a single condition is True then  it will return True else it will return False\n",
+    "# or condition: if a single condition is True then it will return True else it will return False\n",
     "print(True  or True)\n",
     "print(True  or False)\n",
     "print(False or True)\n",
@@ -141,9 +140,8 @@
     "\n",
     "print(\"#######################\")\n",
     "print(True  or True  or True  or True)\n",
-    "print(True  or True  or False or True)\n",
-    "print(False or False or False or False)\n",
-    "\n"
+    "print(True  or False  or False or True)\n",
+    "print(False or False or False or False)"
    ]
   },
   {
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,19 +241,21 @@
     "# combine or +  and\n",
     "\n",
     "# example1: Extra charge if high consumption(more than 500 W) and either urban area or AC is used.\n",
-    "units_used = 520 # power consume\n",
-    "area = 'urban'\n",
-    "has_air_conditioner = True\n",
+    "units_used           = 520 # power consume\n",
+    "area                 = 'urban'\n",
+    "has_air_conditioner  = True\n",
     "\n",
     "res = units_used > 500 and (area == 'urban' or has_air_conditioner) \n",
     "# res =  True         and  (   True        or        True)\n",
+    "# res =  True         and            True\n",
+    "# res =  True\n",
     "\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +275,8 @@
     "\n",
     "res = (math_score > 40 and science_score > 40) or (math_score + science_score > 95) \n",
     "# res = (False        and           True     ) or (   False  )\n",
+    "# res =       False                            or    False\n",
+    "# res =      False\n",
     "\n",
     "print(res)\n",
     "\n",
@@ -353,12 +355,13 @@
    "metadata": {},
    "source": [
     "# 5. Membership Operator- in, not in\n",
-    "- return boolean variable: True or False"
+    "- Returns boolean variable: True or False\n",
+    "- Check if a data is present inside a container"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -366,26 +369,31 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "#STEP1:  check if a substring is present inside another string\n",
-    "sentence = 'University of Miami'\n",
+    "sentence = \"\"\"I need to use a string representation of that in my program. I also\n",
+    "            need to be able to search it for substrings and the like - in other words,\n",
+    "            I need to be able to treat it like a normal sized string. I'll be trying to \n",
+    "            find a lot of substrings so speed is necessary.\n",
+    "            My initial logic was to simply copy and paste the string directly into \n",
+    "            I closed the program eventually).\"\"\"\n",
     "\n",
-    "res = 'Mia' in sentence\n",
+    "res = 'log' in sentence\n",
     "print(res)\n",
     "\n",
     "########################\n",
     "\n",
-    "res = 'Mia' not in sentence\n",
+    "res = 'math' not in sentence\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -398,41 +406,41 @@
     }
    ],
    "source": [
-    "# STEP2: Now I change Mia -> mia\n",
+    "# check if element is present inside a container list\n",
+    "age = [91, 30, 51, 22, 61, 22, 14, 45, 67, 34, 43, 87, 43, 74, 23]\n",
     "\n",
-    "# check if a substring is present inside another string\n",
-    "sentence = 'University of Miami'\n",
-    "\n",
-    "res = 'mia' in sentence\n",
-    "print(res)\n",
-    "\n",
-    "########################\n",
-    "\n",
-    "res = 'mia' not in sentence\n",
-    "print(res)"
+    "print(32 in age)\n",
+    "print(67 in age)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "# check if element is present inside a container\n",
-    "lst = [1, 3, 5, 2]\n",
+    "# check if element is present inside a container tuple\n",
+    "age = ( 91, 30, 51, 22, 61, 22, 14, 45, 67, 34, 43, 87, 43, 74, 23 )\n",
     "\n",
-    "print(1 in lst)\n",
-    "print(7 in lst)"
+    "print(32 in age)\n",
+    "print(67 in age)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -457,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
