--- a/01_Python_Essentials/6_containers_list_tuple_set.ipynb
+++ b/01_Python_Essentials/6_containers_list_tuple_set.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "### Sets:\n",
     "- A set is an **unordered, mutable** collection of elements.\n",
-    "- Contains **no duplicates**. In other words, it contains **unique elements**. \n",
+    "- Contains **no duplicates**. \n",
     "- A set can contain elements of different data types as long as elements are str, int, float or bool. A set cannot contain list or dict.\n",
     "- Does not support indexing or slicing\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "id": "ed560339-86c9-49af-8cd1-b539b582be40",
    "metadata": {},
    "outputs": [
@@ -73,11 +73,7 @@
      "output_type": "stream",
      "text": [
       "['Tom', 'Ashwani', 'Patel', 'Shamlodhiya', 'Ashwani', 'Tom', 'Ashwani']\n",
-      "<class 'list'>\n",
-      "('Tom', 'Ashwani', 'Patel', 'Shamlodhiya', 'Ashwani', 'Tom', 'Ashwani')\n",
-      "<class 'tuple'>\n",
-      "{'Shamlodhiya', 'Patel', 'Ashwani', 'Tom'}\n",
-      "<class 'set'>\n"
+      "<class 'list'>\n"
      ]
     }
    ],
@@ -201,13 +197,13 @@
    ],
    "source": [
     "# set of int, float, bool, str. But cannot create set of list, set, etc\n",
-    "s = { 1, 3.2, True, \"apple\" } \n",
+    "s = { 5, 3.2, True, \"Banana\", \"Mangoe\", False, True } \n",
     "print(s)\n",
     "\n",
     "# ERROR: set of list, set\n",
     "# s = { 1, 3.2, [2, 4] } # ERROR\n",
     "# s = { 1, 3.2, {2, 4} } # ERROR\n",
-    "print(s)"
+    "# print(s)"
    ]
   },
   {
@@ -254,11 +250,12 @@
    "source": [
     "# list access: index starts with 0\n",
     "data = [10, 30, 60, 70, 50, 30, 60, 90, 10, 50] # age, income, houses, size of plot,etc\n",
+    "\n",
     "print(data[0])   # prints element at index 0 : 10\n",
     "print(data[3])   # prints element at index 3 : 70\n",
     "\n",
     "print(data[-1])  # access last number 50\n",
-    "print(data[-4])  # access 4rd last number 60"
+    "print(data[-4])  # access 4th element from the last number"
    ]
   },
   {
@@ -281,9 +278,9 @@
     "# list Slicing: [start_idx: stop_idx: step_size]. \n",
     "# Default for start_idx=0, default for stop_idx=last position, default for step_size=1\n",
     "data = [10, 30, 60, 70, 50, 30, 60, 90, 10, 50] # age, income,\n",
-    "\n",
     "print(data)\n",
-    "print(data[1:5])  # slice from idx=1 to idx=4, but not idx 5: [30, 60, 70, 50]\n",
+    "\n",
+    "print(data[1:5])    # slice from idx=1 to idx=4, but not idx 5: [30, 60, 70, 50]\n",
     "print(data[1:7:2])  # slice from idx=1 to idx=6 with step size=2: [30, 70, 30]"
    ]
   },
@@ -305,8 +302,8 @@
    "source": [
     "# list slicing: part2\n",
     "data = [10, 30, 60, 70, 50, 30, 60, 90, 10, 50]\n",
-    "\n",
     "print(data)\n",
+    "\n",
     "print(data[:3])   # slice first 3 elements: [10, 30, 60]\n",
     "print(data[2:])   # slice from index 2 to last [60, 70, 50, 30, 60, 50]\n",
     "print(data[::2]) # from begin to end with step size =2\n",
@@ -332,11 +329,10 @@
    "source": [
     "# tuple access: index starts with 0\n",
     "data = (10, 30, 60, 70, 50, 30, 60, 90, 10, 50) # age, income, houses, size of plot,etc\n",
+    "print(data)\n",
     "\n",
     "print(data[0])   # prints element at index 0 : 10\n",
-    "\n",
     "print(data[3])   # prints element at index 3 : 70\n",
-    "\n",
     "print(data[-1])  # access last number 50"
    ]
   },
@@ -359,6 +355,7 @@
     "# tuple slicing: [start_idx: stop_idx: step_size]. \n",
     "# Default for start_idx=0, default for stop_idx=last position, default for step_size=1\n",
     "data = (10, 30, 60, 70, 50, 30, 60, 90, 10, 50) # age, income, houses, size of plot,etc\n",
+    "print(data)\n",
     "\n",
     "print(data[1:7])  # slice from idx=1 to idx=6: (30, 60, 70, 50, 30, 60)\n",
     "print(data[1:7:2])  # slice from idx=1 to idx=6 with step size=2: [30, 70, 30]"
@@ -398,6 +395,7 @@
     "# set does not support indexing\n",
     "data = { 10, 30, 60, 70, 50, 30, 60, 90, 10, 50 } \n",
     "print(data)\n",
+    "\n",
     "# print(data[0]) # ERROR"
    ]
   },
@@ -437,9 +435,9 @@
     "\n",
     "## modify list\n",
     "data = [10, 20, 60, 10, 20, 30]\n",
-    "print(f\"data BEFORE= {data}\")\n",
+    "print(\"data BEFORE =\", data)\n",
     "data[2] = 99\n",
-    "print(f\"data AFTER = {data}\")\n",
+    "print(\"data AFTER  =\", data)\n",
     "\n",
     "# ## set elements can be changed but not through indexing. Explained later below on how to do this. "
    ]
@@ -453,8 +451,9 @@
    "source": [
     "## modify tuple not possible\n",
     "data = (10, 20, 60, 10, 20, 30)\n",
-    "print(f\"data= {data}\")\n",
-    "# data[2] = 25 # ERROR\n"
+    "\n",
+    "print(\"data =\", data)\n",
+    "# data[2] = 25 # ERROR"
    ]
   },
   {
@@ -514,9 +513,12 @@
    ],
    "source": [
     "# lets look at few of them: appended at the end.\n",
+    "\n",
     "data = [10, 20, 30, 40, 50]\n",
     "print(data)\n",
+    "\n",
     "data.append(17)  # Adds 17 at the end. \n",
+    "\n",
     "print(data)  "
    ]
   },
@@ -538,9 +540,11 @@
    "source": [
     "# insert() based on index\n",
     "data = [10, 20, 30, 40, 50]\n",
-    "print(f\"{data}\")  \n",
+    "print(data)  \n",
+    "\n",
     "data.insert(3, 99)  # Insert 99 at index 3 and push the other elements towards right\n",
-    "print(f\"{data}\")  "
+    "\n",
+    "print(data)  "
    ]
   },
   {
@@ -562,7 +566,9 @@
     "# remove() an element based on its value\n",
     "data = [10, 20, 30, 40, 50, 99, 50]\n",
     "print(data)\n",
+    "\n",
     "data.remove(50) # works on actual element and removes 1st matching element\n",
+    "\n",
     "print(data)"
    ]
   },
@@ -585,7 +591,9 @@
     "# pop(): remove an element based on its idx\n",
     "data = [10, 20, 30, 40, 50]\n",
     "print(data)\n",
-    "data.pop(2) # works on actual index\n",
+    "\n",
+    "data.pop(2) # works on actual index. Pop the element at idx=2\n",
+    "\n",
     "print(data)"
    ]
   },
@@ -608,6 +616,7 @@
     "data = [10, 20, 30, 40, 50, 99, 30]\n",
     "\n",
     "idx = data.index(30)\n",
+    "\n",
     "print(f\"index: {idx}\") # returns the 1st matching index"
    ]
   },
@@ -678,10 +687,13 @@
    ],
    "source": [
     "# reverse(): Reversing the list\n",
+    "\n",
     "data = [-6, 10, 20, 30, 25, 40, 17]\n",
-    "print(\"Before:\",data)\n",
+    "print(\"Before:\", data)\n",
+    "\n",
     "data.reverse()\n",
-    "print(\"After: \",data)"
+    "\n",
+    "print(\"After: \", data)"
    ]
   },
   {
@@ -767,7 +779,9 @@
     "# index(): find index of an element\n",
     "\n",
     "data = (10, 20, 60, 30, 60, 40, 60)\n",
+    "\n",
     "idx = data.index(60) # gets the index of 1st matching elements\n",
+    "\n",
     "print(f\"idx: {idx}\")\n",
     "\n",
     "# idx = data.index(999) # ERROR"
@@ -865,7 +879,9 @@
     "\n",
     "guests = {\"Lee\", \"Wurtzberger\", \"Chaudhary\", \"Shamlodhiya\"}\n",
     "print(guests)\n",
+    "\n",
     "guests.remove(\"Lee\")  # Remove a guest\n",
+    "\n",
     "print(guests)"
    ]
   },
@@ -959,8 +975,35 @@
    ],
    "source": [
     "# difference() (Students only in class gym and not in art class)\n",
+    "class_art = {\"Alice\", \"Bob\", \"Charlie\", \"Zena\"}\n",
+    "class_gym = {\"Bob\", \"David\", \"Zena\", \"Geeta\", \"Vicky\"}\n",
+    "\n",
     "print(\"difference2 :\", class_gym.difference(class_art))  \n",
     "print(\"difference2 :\", class_gym - class_art)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5548f0b5-45be-4ff8-88ad-8631c58c4a06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b76fb2b8-fec2-4666-bc87-3d41e243509c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# isdisjoint : Application - Can be used to check if 2 sets of emails, company A and B, have any common email.\n",
+    "a = {\"bob@gmail.com\", \"bob@hotmail.com\", \"geeta@yahoomail.com\", \"bob@msnmail.com\", \"ash@hotmail.com\"}\n",
+    "b = {\"bob@gmail.com\", \"bob@msnmail.com\"}\n",
+    "c = {\"geeta2@yahoomail.com\", \"bob3@msnmail.com\"}\n",
+    "\n",
+    "print(a.isdisjoint(b))  \n",
+    "print(a.isdisjoint(c)) "
    ]
   },
   {
@@ -979,7 +1022,7 @@
     }
    ],
    "source": [
-    "# isdisjoint: check if 2 sets have any common elements\n",
+    "# (OPTIONAL)isdisjoint: check if 2 sets have any common elements\n",
     "# Scheduling (No Time Conflicts)\n",
     "a = {10, 12, 13, 14} # meeting time 10 - 14\n",
     "b = {14, 15, 16}  # meeting time 14 - 16\n",
@@ -1004,15 +1047,7 @@
      ]
     }
    ],
-   "source": [
-    "# isdisjoint : Application - Can be used to check if 2 sets of emails, company A and B, have any common email.\n",
-    "a = {\"bob@gmail.com\", \"bob@hotmail.com\", \"geeta@yahoomail.com\", \"bob@msnmail.com\", \"ash@hotmail.com\"}\n",
-    "b = {\"bob@gmail.com\", \"bob@msnmail.com\"}\n",
-    "c = {\"geeta2@yahoomail.com\", \"bob3@msnmail.com\"}\n",
-    "\n",
-    "print(a.isdisjoint(b))  \n",
-    "print(a.isdisjoint(c)) "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1036,13 +1071,13 @@
     "# combo_offer = {\"bread\", \"butter\", \"jam\", \"honey\", \"milk\"}\n",
     "# cart = {\"bread\", \"butter\"}\n",
     "\n",
-    "a = {\"bread\", \"cookies\", \"jam\", \"honey\", \"milk\"}\n",
-    "b = {\"bread\", \"cookies\"}\n",
-    "c = {\"cookies\", \"jam\", \"honey\", \"bread\"}\n",
+    "A = {\"bread\", \"cookies\", \"jam\", \"honey\", \"milk\"}\n",
+    "B = {\"bread\", \"cookies\"}\n",
+    "C = {\"cookies\", \"jam\", \"honey\", \"bread\"}\n",
     "\n",
-    "print(b.issubset(a))  # True -> b is subset of a\n",
-    "print(a.issubset(c))  # False\n",
-    "print(c.issubset(a))  # True "
+    "print(B.issubset(A))  # True -> b is subset of a\n",
+    "print(A.issubset(C))  # False\n",
+    "print(C.issubset(A))  # True "
    ]
   },
   {
