--- a/01_Python_Essentials/6_dictionary.ipynb
+++ b/01_Python_Essentials/6_dictionary.ipynb
@@ -286,6 +286,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c6da6a9d-3874-4730-8ccd-caca0bed8fa2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e075ff-327b-4d11-bb66-0a66304ee8d3",
+   "metadata": {},
+   "source": [
+    "### Checking for a Key in the Dictionary\n",
+    "Scenario: Checking if a student's score is stored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be945e51-1a5a-45ba-ac85-f1b871a4ebb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Application: check for a key, value\n",
+    "\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
+    "}\n",
+    "\n",
+    "search = 'Eve' # Tanner\n",
+    "\n",
+    "# method1:\n",
+    "if search in student_scores:\n",
+    "    print(f\" {search} score is available.\")\n",
+    "else:\n",
+    "    print(f\" {search} score is not found.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f338af7-2247-4b0a-8017-f51587c4a16c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# method2:\n",
+    "if search in student_scores.keys():\n",
+    "    print(f\" {search} score is available.\")\n",
+    "else:\n",
+    "    print(f\" {search} score is not found.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a9e69f0-bbf6-4d5b-912a-89dc0f3a5613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Did someone scored 78 ?\n",
+    "if 78 in student_scores.values():\n",
+    "    print(f\"score is available.\")\n",
+    "else:\n",
+    "    print(f\"score not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1cc39c-0ccf-4a74-9b29-2eaa2b761bf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eccacc3-050d-4819-b532-46d9e894088d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "930d73b1-ffac-4206-968f-cca88692c8a1",
    "metadata": {},
@@ -310,6 +395,61 @@
     "items = student_scores.items()\n",
     "print(items)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad6f2c32-d6a7-4c60-8f31-a6a1c0b9cf34",
+   "metadata": {},
+   "source": [
+    "###  Iterating Over a Dictionary using for loop\n",
+    "Scenario: Printing each student's name and score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8ee04c0-e9dd-43c5-9e13-66f2097a8418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterate over dictionary using items\n",
+    "\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
+    "}\n",
+    "\n",
+    "for name,score in student_scores.items():\n",
+    "    print(f\"The dictionary key:values are {name} : {score}\")\n",
+    "\n",
+    "print(\"Done\")\n",
+    "\n",
+    "######################\n",
+    "# APPLICATION: count how many students scored > 80\n",
+    "count = 0\n",
+    "for name,score in student_scores.items():\n",
+    "   if score > 80:\n",
+    "       count +=1\n",
+    "       \n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8081791d-1e37-4e8e-b7cd-9cb3f9c3adb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5ce328-4df8-4ca0-96c2-70b2beed4a18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -372,75 +512,20 @@
     "   \"Tanner\"  : 78\n",
     "}\n",
     "\n",
-    "print(f\"before adding:{student_scores}\")\n",
+    "print(\"before adding:\", student_scores)\n",
     "student_scores[\"David\"] = 88  # Adding new key-value pair\n",
-    "print(f\"after adding: {student_scores}\")\n",
+    "print(\"after  adding:\", student_scores)\n",
     "\n",
-    "#######################\n",
     "# Now I want to update some value based on key\n",
     "student_scores[\"Surendar\"] = 90  # Updating value\n",
-    "print(f\"after update: {student_scores}\")"
+    "print(f\"after  update: {student_scores}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d1deae01-3e12-4366-91eb-c5e11bb902b2",
    "metadata": {},
-   "source": [
-    "###  Iterating Over a Dictionary using for loop\n",
-    "Scenario: Printing each student's name and score."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bd422bb-8be7-4a10-8d97-d074b9117eaf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dictionary key:values are Surendar: 85\n",
-      "The dictionary key:values are Bob: 92\n",
-      "The dictionary key:values are Tanner: 78\n",
-      "Done\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# iterate over dictionary\n",
-    "\n",
-    "student_scores = {\n",
-    "   \"Surendar\": 85, \n",
-    "   \"Bob\"     : 92,\n",
-    "   \"Tanner\"  : 78\n",
-    "}\n",
-    "\n",
-    "for name,score in student_scores.items():\n",
-    "    print(f\"The dictionary key:values are {name} : {score}\")\n",
-    "\n",
-    "print(\"Done\")\n",
-    "\n",
-    "######################\n",
-    "#APPLICATION: count how many students scored > 80\n",
-    "count = 0\n",
-    "for name,score in student_scores.items():\n",
-    "   if score > 80:\n",
-    "       count +=1\n",
-    "       \n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83a1da65-3ba9-4504-b56a-8ea7c4847321",
-   "metadata": {},
-   "source": [
-    "### Checking for a Key in the Dictionary\n",
-    "Scenario: Checking if a student's score is stored."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -456,38 +541,7 @@
      ]
     }
    ],
-   "source": [
-    "# check for a key, value\n",
-    "\n",
-    "student_scores = {\n",
-    "   \"Surendar\": 85, \n",
-    "   \"Bob\"     : 92,\n",
-    "   \"Tanner\"  : 78\n",
-    "}\n",
-    "\n",
-    "search = 'Eve' # Tanner\n",
-    "\n",
-    "# method1:\n",
-    "if search in student_scores:\n",
-    "    print(f\" {search} score is available.\")\n",
-    "else:\n",
-    "    print(f\" {search} score is not found.\")\n",
-    "\n",
-    "#########################################\n",
-    "# method2:\n",
-    "if search in student_scores.keys():\n",
-    "    print(f\" {search} score is available.\")\n",
-    "else:\n",
-    "    print(f\" {search} score is not found.\")\n",
-    "\n",
-    "#########################################\n",
-    "\n",
-    "if 78 in student_scores.values():\n",
-    "    print(f\"score is available.\")\n",
-    "else:\n",
-    "    print(f\"score not found.\")\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -603,7 +657,7 @@
    ],
    "source": [
     "# List in dictionary: Values are list\n",
-    "students = { # key=name, value=[age,height,location]\n",
+    "students = { # key=name, value=[score,height,location]\n",
     "    \"Swamy\" : [50, 1.7, \"Kerala\"],\n",
     "    \"Tinku\" : [43, 1.3, \"Delhi\"],\n",
     "    \"Happy\" : [32, 1.8, \"Noida\"]\n",
@@ -634,9 +688,9 @@
     "# dictionary in dictionary:  values are dictionary\n",
     "\n",
     "students = {\n",
-    "    \"Swamy\" : {'age': 50, 'ht': 1.7, 'location': \"Kerala\"},\n",
-    "    \"Tinku\" : {'age': 43, 'ht': 1.3, 'location': \"Delhi\"},\n",
-    "    \"Happy\" : {'age': 32, 'ht': 1.8, 'location': \"Noida\"}   \n",
+    "    \"Swamy\" : {'score': 50, 'ht': 1.7, 'location': \"Kerala\"},\n",
+    "    \"Tinku\" : {'score': 43, 'ht': 1.3, 'location': \"Delhi\"},\n",
+    "    \"Happy\" : {'score': 32, 'ht': 1.8, 'location': \"Noida\"}   \n",
     "}\n",
     "\n",
     "print(students)                 # show all elements of dictionary\n",
@@ -691,9 +745,17 @@
     "# Method 1: Using update()\n",
     "merged_scores = class_a.copy()\n",
     "merged_scores.update(class_b)\n",
-    "print(merged_scores)\n",
-    "#################################\n",
     "\n",
+    "print(merged_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212bf6b1-9865-4cc5-bb48-451e60af1bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Method 2: Using `|` operator (Python 3.9+)\n",
     "merged_scores = class_a | class_b\n",
     "print(merged_scores)"
