--- a/01_Python_Essentials/9_function_2_inbuilt-2_enumerate_isinstance_open.ipynb
+++ b/01_Python_Essentials/9_function_2_inbuilt-2_enumerate_isinstance_open.ipynb
@@ -22,6 +22,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need for open() function: We have to read/write to  files\n",
+    "\n",
+    "# STEP1: write multiple strings\n",
+    "# file = open(r\"C:\\Users\\hi\\Desktop\\example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
+    "\n",
+    "msg = \"\"\"1 Hello, World!\n",
+    "How many characters are in shamlodhiya\n",
+    "Answer is 11.\n",
+    "\"\"\"\n",
+    "\n",
+    "file.write(msg) \n",
+    "file.close()\n",
+    "\n",
+    "# view the file in  notepad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP2: Read the content\n",
+    "file = open(\"example.txt\", \"r\")  # Opens in read mode\n",
+    "\n",
+    "content = file.read()\n",
+    "file.close()\n",
+    "\n",
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# enumerate"
    ]
   },
@@ -276,34 +328,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## open()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Need for open() function: We have to read/write to  files\n",
-    "\n",
-    "# STEP1: write multiple strings\n",
-    "# file = open(r\"C:\\Users\\hi\\Desktop\\example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
-    "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
-    "\n",
-    "msg = \"\"\"1 Hello, World!\n",
-    "How many characters are in shamlodhiya\n",
-    "Answer is 11.\n",
-    "\"\"\"\n",
-    "\n",
-    "file.write(msg) \n",
-    "file.close()\n",
-    "\n",
-    "# view the file in  notepad"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -321,15 +350,7 @@
      ]
     }
    ],
-   "source": [
-    "# STEP2: Read the content\n",
-    "file = open(\"example.txt\", \"r\")  # Opens in read mode\n",
-    "\n",
-    "content = file.read()\n",
-    "file.close()\n",
-    "\n",
-    "print(content)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
