--- a/02_Python_Essentials/L03_operators_1_Arithmetic_Comparison_Assignment.ipynb
+++ b/02_Python_Essentials/L03_operators_1_Arithmetic_Comparison_Assignment.ipynb
@@ -29,33 +29,12 @@
     }
    ],
    "source": [
-    "# Addition b+\n",
+    "# Addition +\n",
     "x = 7\n",
     "y = 5\n",
     "res = x + y\n",
     "\n",
     "print(res) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "#or I can print addition without using variable res\n",
-    "x = 6\n",
-    "y = 5\n",
-    "\n",
-    "print(x + y) # style1"
    ]
   },
   {
@@ -218,6 +197,7 @@
    ],
    "source": [
     "# Lets print the boolean variable: True / False\n",
+    "\n",
     "print(True) \n",
     "print(False)"
    ]
@@ -765,60 +745,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### (OPTIONAL): Order of Operators\n",
-    "\n",
-    "#### Python Operator Precedence (Highest to Lowest)\n",
-    "Here’s the order in which Python evaluates operators:\n",
-    "\n",
-    "- ** (Exponentiation)\n",
-    "\n",
-    "- *, / (Multiplication and Division)\n",
-    "\n",
-    "- +, - (Addition and Subtraction)\n",
-    "\n",
-    "- Operators with the same precedence are evaluated left to right (except **, which is right to left)."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "a = 2\n",
-    "b = 3\n",
-    "c = 4\n",
-    "\n",
-    "result = a + b * c\n",
-    "print(result)  # Output: 14\n",
-    "\n",
-    "print(\"####################\")\n",
-    "# Now I want addition to happen before multiplication\n",
-    "result = (a + b) * c\n",
-    "print(result)  # Output: 20\n",
-    "\n",
-    "print(\"####################\")\n",
-    "result = 2 ** 3 * 4  # = (2**3) * 4 = 8*4 = 32\n",
-    "print(result)  # Output: 32\n",
-    "\n",
-    "print(\"####################\")\n",
-    "result = 10 + 6 / 2 * 3 - 1\n",
-    "print(result)  # Output: 18.0\n",
-    "\n",
-    "\n",
-    "print(\"####################\")\n",
-    "a = 30\n",
-    "b = 10\n",
-    "c = 20\n",
-    "d = 5\n",
-    "res = (a+b)*c/d\n",
-    "print(res)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
